--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
   <main class="flex flex-1 items-center justify-center px-4 py-8">
     <section class="w-full max-w-lg bg-white rounded-3xl shadow-xl p-8 sm:p-12 flex flex-col items-center" itemscope itemtype="https://schema.org/WebSite">
       <!-- Logo -->
-      <img src="logo.png" alt="Logo PUESTO360, plataforma de empleos" class="w-20 h-20 mb-6 object-contain" itemprop="image" />
+      <!-- <img src="logo.png" alt="Logo PUESTO360, plataforma de empleos" class="w-20 h-20 mb-6 object-contain" itemprop="image" /> -->
+      <video 
+        src="intro.mp4" 
+        autoplay 
+        loop 
+        muted 
+        playsinline 
+        class="w-full rounded-2xl mb-6 shadow-lg"
+        style="max-height: 320px; object-fit: cover;"
+      >
+        Tu navegador no soporta la reproducción de video.
+      </video>
       <!-- Mensaje principal -->
       <h1 class="text-2xl sm:text-3xl md:text-4xl font-extrabold text-center text-gray-900 mb-3" itemprop="name">
         ¡PUESTO<span class="text-principal">360</span> está en desarrollo!
