--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <title>PUESTO360 - En desarrollo</title>
   <meta name="description" content="Puesto360 es el marketplace para comerciantes del rubro textil. Vende tus productos en línea y accede a la posibilidad de tener un puesto físico en showrooms exclusivos, seleccionados por popularidad y ranking. Una solución innovadora, con grandes beneficios y mucho futuro para tu negocio textil.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://puesto360.com/">
+  <link rel="canonical" href="https://puesto360.com.ar/">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="PUESTO360 - En desarrollo">
   <meta property="og:description" content="Puesto360 es el marketplace para comerciantes del rubro textil. Vende tus productos en línea y accede a la posibilidad de tener un puesto físico en showrooms exclusivos, seleccionados por popularidad y ranking. Una solución innovadora, con grandes beneficios y mucho futuro para tu negocio textil.">
-  <meta property="og:image" content="https://puesto360.com/og-image.png">
-  <meta property="og:url" content="https://puesto360.com/">
+  <meta property="og:image" content="https://puesto360.com.ar/og-image.png">
+  <meta property="og:url" content="https://puesto360.com.ar/">
   <meta property="og:site_name" content="PUESTO360">
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="PUESTO360 - En desarrollo">
   <meta name="twitter:description" content="Puesto360 es el marketplace para comerciantes del rubro textil. Vende tus productos en línea y accede a la posibilidad de tener un puesto físico en showrooms exclusivos, seleccionados por popularidad y ranking. Una solución innovadora, con grandes beneficios y mucho futuro para tu negocio textil.">
-  <meta name="twitter:image" content="https://puesto360.com/og-image.png">
+  <meta name="twitter:image" content="https://puesto360.com.ar/og-image.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
